# ter

./: CMakeLists.txt  Job-2.inp  Mesh2D.cpp  Mesh2D.h  data.toml  data_file.cpp  data_file.h  image.cpp  main.cpp  solveur.cpp  solveur.h
Abaqus/: Composite__traction_uniaxiale.cae
Meshes/: cas_test.geo  cas_test.mesh
